<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textAlignment="center"
        android:textSize="@dimen/title"
        android:fontFamily="@font/permanent_marker_regular"
        android:shadowColor="@color/black"
        android:layout_marginBottom="@dimen/space_margin"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_margin">

        <TextView
            android:id="@+id/tv_main_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_create_note"
            android:textSize="@dimen/label"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            />

        <EditText
            android:id="@+id/et_main_filename_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/tv_main_create"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textColor="@color/pink"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/btn_main_filename_create"
            />

        <Button
            android:id="@+id/btn_main_filename_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_main_create"
            android:backgroundTint="@color/black"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_list_note"
        android:textSize="@dimen/label"
        android:textColor="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_files"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_note"
        />

</LinearLayout>