<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/space_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_note_title"
            android:layout_marginEnd="5dp"
            android:textSize="@dimen/label"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_edit_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FILENAME"
            android:textSize="@dimen/label"
            android:textColor="@color/black"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_margin="1dp"
        android:background="@drawable/border"
        android:layout_marginBottom="@dimen/space_margin"
        android:importantForAutofill="no"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:scrollbars="vertical"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save"
            android:backgroundTint="@color/green"
            />

        <View
            android:layout_width="@dimen/btn_margin"
            android:layout_height="0dp"
            />

        <Button
            android:id="@+id/btn_edit_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:backgroundTint="@color/red"
            />

    </LinearLayout>


</LinearLayout>